# Autonomous_Serial_Manipulators_for_Industry

./: README.md
Autonomous_Serial_Manipulators_for_Industry/attrobot/: CMakeLists.txt  package.xml  setup.py
Autonomous_Serial_Manipulators_for_Industry/attrobot/launch/: attrobot_demo.launch
Autonomous_Serial_Manipulators_for_Industry/attrobot/msg/: ball_trajectory.msg  control_params.msg  robot_trajectory.msg
Autonomous_Serial_Manipulators_for_Industry/attrobot/plotting/: port_6510_log.csv
Autonomous_Serial_Manipulators_for_Industry/attrobot/scripts/: Plotting.py  control_optimization.py  hitting_decision.py  log_data.py  path_planning.py  print_time.py  process_and_predict.py  target_pose.py  test.py  trajectory_planning.py
Autonomous_Serial_Manipulators_for_Industry/attrobot/src/: calculate_distance.cpp  egm_comm_demo.cpp  euler_to_quat.cpp  reflexxes_controller.cpp  rws_demo.cpp  transformation.cpp
Autonomous_Serial_Manipulators_for_Industry/attrobot/src/attrobot/: Generalized_Impact_Model.py  STOPP.py  traj_pred.py
Autonomous_Serial_Manipulators_for_Industry/track3d/: CMakeLists.txt  CMakeLists.txt.user.41e3e33.xml  CMakeLists.txt.user.58826d4  CMakeLists.txt.user.58826d4.4.8-pre1  CMakeLists.txt.user.ab15ad8.20  CMakeLists.txt.user.djhHJy  Changes.txt  Tf_pseudo_inv  catkin_build_command  package.xml  setup.py  untitled.m
Autonomous_Serial_Manipulators_for_Industry/track3d/launch/: detect_and_predict.launch  ref_assign.launch
Autonomous_Serial_Manipulators_for_Industry/track3d/msg/: img_stream.msg
Autonomous_Serial_Manipulators_for_Industry/track3d/scripts/: Open_sfm_Rigid_transform.py  Post_Processing_Block.py  process_and_predict.py  read.py
Autonomous_Serial_Manipulators_for_Industry/track3d/src/: cam_accuracy.cpp  fetch_and_align.cpp  fetch_and_align_assign.cpp  line_detection.cpp  ref_assign.cpp  tracking.cpp  traj_read.cpp
Autonomous_Serial_Manipulators_for_Industry/track3d/src/Template/: rs_pipeline.cpp
Autonomous_Serial_Manipulators_for_Industry/track3d/src/track3d/: Generalized_Impact_Model.py  Post_Processing_Block.py  traj_pred.py
